--- a/index.html
+++ b/index.html
@@ -32,24 +32,27 @@
       <div class="menu">
         <ul class="menu-li">
           <a href="#" onclick="toggleMenu()"><li>link 1</li></a>
-          <a href="#pagolinea-business" onclick="toggleMenu()"><li>PAGOLINEA NEGOCIOS</li></a>
+          <a href="#pagolinea-business" onclick="toggleMenu()"
+            ><li>PAGOLINEA NEGOCIOS</li></a
+          >
           <a href="#" onclick="toggleMenu()"><li>link 3</li></a>
           <a href="#" onclick="toggleMenu()"><li>link 4</li></a>
         </ul>
+      </div>
+      <div class="row">
+        <div class="col-12">
+          <img
+            class="main-logo"
+            src="assets/logos/logo-white.jpeg"
+            alt="Logo de PagoLinea"
+          />
+        </div>
       </div>
       <div class="container">
         <div class="menu-toggler" onclick="toggleMenu()">
           <ion-icon id="toggle-icon" name="reorder-three-outline"></ion-icon>
         </div>
-        <div class="row">
-          <div class="col-12">
-            <img
-              class="main-logo"
-              src="assets/logos/Logo-horizontal.png"
-              alt="Logo de PagoLinea"
-            />
-          </div>
-        </div>
+
         <div class="row">
           <div class="col-6">
             <!-- <img class="iphone-pl mx-auto" src="assets/iphone-pl-transparent.png" alt="PagoLinea iphone image"> -->
@@ -120,9 +123,9 @@
 
       <footer>
         <div class="row">
-            <ul>
-                <li>Hola</li>
-            </ul>
+          <ul>
+            <li>Hola</li>
+          </ul>
         </div>
       </footer>
     </main>
