--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
   <body>
     <main>
       <div class="social-networks">
-        <a href="" target="_blank"
+        <a href="https://m.facebook.com/" target="_blank"
           ><ion-icon class="social" name="logo-facebook"></ion-icon
         ></a>
-        <a href="" target="_blank"
+        <a href="https://instagram.com/pago_linea?igshid=54huwmyopaa" target="_blank"
           ><ion-icon class="social" name="logo-instagram"></ion-icon
         ></a>
-        <a href="" target="_blank"
+        <!-- <a href="" target="_blank"
           ><ion-icon class="social" name="logo-twitter"></ion-icon
-        ></a>
+        ></a> -->
       </div>
       <div class="menu">
         <ul class="menu-li">
@@ -35,7 +35,7 @@
           <a href="#pagolinea-business" onclick="toggleMenu()"
             ><li>PAGOLINEA NEGOCIOS</li></a
           >
-          <a href="#" onclick="toggleMenu()"><li>link 3</li></a>
+          <a href="https://wwww.pagolinea.com" onclick="toggleMenu()"><li>REGISTRARSE</li></a>
           <a href="#" onclick="toggleMenu()"><li>link 4</li></a>
         </ul>
       </div>
@@ -123,9 +123,20 @@
 
       <footer>
         <div class="row">
-          <ul>
-            <li>Hola</li>
-          </ul>
+          <div class="col-12">PagoLinea  &copy; 2020. Todos los derechos reservados</div>
+          <div class="col-12">
+            <div class="social-networks footer">
+              <a href="https://m.facebook.com/" target="_blank"
+                ><ion-icon class="social" name="logo-facebook"></ion-icon
+              ></a>
+              <a href="https://instagram.com/pago_linea?igshid=54huwmyopaa" target="_blank"
+                ><ion-icon class="social" name="logo-instagram"></ion-icon
+              ></a>
+              <!-- <a href="" target="_blank"
+                ><ion-icon class="social" name="logo-twitter"></ion-icon
+              ></a> -->
+            </div>
+          </div>
         </div>
       </footer>
     </main>
