--- a/index.html
+++ b/index.html
@@ -36,14 +36,18 @@
         </ul>
       </div>
       <header>
-        <img
+        <img src="assets/logos/Logo-horizontal.png" alt="Logo horizontal de pago linea" class="logo-web-horizontal">
+        <!-- <img
           class="logo-web"
           src="assets/logos/web-logo.png"
           alt="Logo wwww.pagolinea.com"
-        />
-        <a class="header-btn" href="https://wwww.pagolinea.com" >REGISTRARSE</a>
+        /> -->
+        <a class="header-btn" href="https://wwww.pagolinea.com" >Iniciar sesi&oacute;n</a>
+        <div class="menu-toggler" onclick="toggleMenu()">
+          <ion-icon id="toggle-icon" name="reorder-three-outline"></ion-icon>
+        </div>
       </header>
-      <div class="row">
+      <!-- <div class="row">
         <div class="col-12 col-md-6">
           <img
             class="main-logo"
@@ -51,11 +55,8 @@
             alt="Logo de PagoLinea"
           />
         </div>
-      </div>
+      </div> -->
       <div class="container-fluid">
-        <div class="menu-toggler" onclick="toggleMenu()">
-          <ion-icon id="toggle-icon" name="reorder-three-outline"></ion-icon>
-        </div>
 
         <div class="row">
           <div class="col-6 col-md-3 col-md-offset-6 screenshot-container">
@@ -100,6 +101,11 @@
               transaccionar divisas internacionales y criptomonedas a base y
               administrados con tecnología BLOCKCHAIN.
             </p>
+            <div class="pl-0 pr-0 mt-3 mb-5 start-now-container-xl">
+              <a href="https://wwww.pagolinea.com" class="start-now">
+                EMPIEZA YA
+              </a>
+            </div>
             <div class="social-networks">
               <a title="Facebook" href="https://m.facebook.com/" target="_blank"
                 ><ion-icon class="social" name="logo-facebook"></ion-icon
@@ -179,6 +185,11 @@
         </div>
       </div>
 
+      <div class="col-12 pl-0 pr-0 mt-3 mb-5 start-now-container">
+        <a href="https://wwww.pagolinea.com" class="start-now">
+          EMPIEZA YA
+        </a>
+      </div>
       <footer>
         <div class="row">
           <div class="col-12">
