--- a/index.html
+++ b/index.html
@@ -156,13 +156,13 @@
             
             <div class="social-networks">
               <a title="Facebook" href="https://m.facebook.com/" target="_blank"
-                ><ion-icon class="social" name="logo-facebook"></ion-icon
+                ><ion-icon class="social" name="logo-facebook" style="font-size: 30px;"></ion-icon
               ></a>
               <a
                 title="Instagram"
                 href="https://instagram.com/pago_linea?igshid=54huwmyopaa"
                 target="_blank"
-                ><ion-icon class="social" name="logo-instagram"></ion-icon
+                ><ion-icon class="social" name="logo-instagram" style="font-size: 30px;"></ion-icon
               ></a>
               <!-- <a href="" target="_blank"
                 ><ion-icon class="social" name="logo-twitter"></ion-icon
@@ -189,6 +189,19 @@
           <div class="col-6 col-sm-4 col-xl-2 offset-xl-1 offset-3 offset-sm-0 services-container">
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9a/BTC_Logo.svg/2000px-BTC_Logo.svg.png" alt="">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+          </div>
+          <div class="services-container mobile col-12">
+            <img class="mr-3" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9a/BTC_Logo.svg/2000px-BTC_Logo.svg.png" alt="">
+            <div><h3>Hola</h3><p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p></div>
+          </div>
+          <div class="services-container mobile col-12">
+            
+            <div><h3>Hola</h3><p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p></div>
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9a/BTC_Logo.svg/2000px-BTC_Logo.svg.png" alt="">
+          </div>
+          <div class="services-container mobile col-12">
+            <img class=" mr-3" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9a/BTC_Logo.svg/2000px-BTC_Logo.svg.png" alt="">
+            <div><h3>Hola</h3><p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p></div>
           </div>
           <div class="pl-0 pr-0 mt-3 mb-5 start-now-container-xl">
             <a href="https://wwww.pagolinea.com" class="start-now">
@@ -232,7 +245,7 @@
                     <div class="screenshot-desc">
                       <h1>¡IMPULSA TU NEGOCIO!</h1>
                       <p>PAGO LINEA LE PROPORCIONA A TUS CLIENTES UNA GRAN VARIEDAD DE METODOS DE PAGO LO CUAL IMPULSARA TU NEGOCIO Y GARANTIZARA EL EXITO DEL MISMO</p>
-                      <a class="screenshot-desc-btn">IR A ?????</a>
+                      <a class="screenshot-desc-btn">DESCARGAR PRESENTACION</a>
                     </div>
                   </div>
                   <div class="col-12 col-md-6">
